# qimp

./: .gitignore  AGENTS.md  Modelfile.qimp  README.md  pyproject.toml  requirements.txt
configs/: eval.yaml  inference.yaml  train_lora.yaml
data/samples/: eval_predictions.jsonl  linux_instructions.jsonl
scripts/: evaluate.py  generate_dataset.py  merge_adapter.py  prepare_dataset.py  run_inference.py  train.sh  train_lora.py
src/qimp/: __init__.py  data.py  evals.py  inference.py  prompts.py  safety.py  train.py
src/qimp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_dataset.py  test_prompts.py  test_safety.py
